Fix CartForm input width on small devices

--- a/src/components/Cart/CartForm/CartInput/CartInput.module.scss
+++ b/src/components/Cart/CartForm/CartInput/CartInput.module.scss
@@ -5,7 +5,7 @@ label {
     flex-flow: column;
     margin: .5rem auto;
     width: 20rem;
-    max-width: 100%;
+    max-width: 95%;
 
     input {
         margin: .5rem 0;
